compiler/test/snapshot/infer-expr/type-errors-in-method-chains.exp
Type errors in method chains

SOURCE:
{
  struct Foo {}
  struct Bar {}
  struct Baz {}

  impl Foo { fn foo(self) -> int { 1 } }
  impl Bar { fn bar(self) -> Baz { Baz{} } }
  impl Baz { fn baz(self) -> Bar { Bar{} } }

  Bar{}
  .bar()
  .baz()
  .foo()
}

OUTPUT:
Type:
    Bar
has no field or method:
    foo

13|    .foo()
        ^^^